# tr2_essentials

./: README.md
tr2_description/: CMakeLists.txt  package.xml  urdf.rviz
tr2_description/launch/: tr2_xacro.launch
tr2_description/robots/: tr2.urdf.xacro
tr2_description/urdf/: tr2.main.xacro
tr2_gazebo/: CMakeLists.txt  package.xml
tr2_gazebo/launch/: tr2_boxes.launch  tr2_empty.launch  tr2_gazebo.launch
tr2_gazebo/worlds/: tr2_boxes.world
tr2_hardware_interface/: CMakeLists.txt  package.xml
tr2_hardware_interface/config/: controllers.yaml  controllers_sim.yaml  fake_joint_offsets.yaml  hardware.yaml  joint_limits.yaml  joint_offsets.yaml
tr2_hardware_interface/include/tr2_hardware_interface/: tr2_hardware.h  tr2_hardware_interface.h
tr2_hardware_interface/launch/: tr2_effort_controllers.launch  tr2_position_controllers.launch  tr2_position_trajectory_controllers.launch  tr2_sim.launch
tr2_hardware_interface/src/: tr2_hardware_interface.cpp  tr2_hardware_interface_node.cpp
tr2_jetson_setup/: README.md  install_tr2.bash  install_tr2_nano.bash  install_tr2_tx2.bash  kernel_drivers.bash  orbbec_packages.bash  ros_base.bash  ros_kinetic.bash  ros_melodic.bash  tr2_packages.bash
tr2_keyboard_teleop/: CMakeLists.txt  README.md  package.xml
tr2_keyboard_teleop/launch/: tr2_keyboard_teleop.launch
tr2_moveit/: CMakeLists.txt  package.xml
tr2_navigation/: CMakeLists.txt  package.xml  setup.py
tr2_navigation/launch/: navigation.launch  obstacle_avoidance.launch  tr2_navigation.launch
tr2_navigation/src/: navigation.py  obstacle_avoidance.py
tr2_navigation/src/tr2_navigation/: __init__.py  routine_avoid_obstacle.py  routine_go_to_goal.py
tr2cpp/: CMakeLists.txt  package.xml
tr2py/: CMakeLists.txt  package.xml  setup.py
(+114 files in other folders)
